--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
     "multiparty": "^4.1.3",
+    "node-xlsx": "^0.7.4",
     "nodemailer": "^3.1.4",
     "pm2": "^2.4.2",
     "request": "^2.79.0",
