--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.0",
+    "gulp-minify-css": "^1.2.4",
     "jsx": "^0.9.89",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
